fix loading tiles on mobile

--- a/src/components/LoadingTiles/LoadingTiles.css
+++ b/src/components/LoadingTiles/LoadingTiles.css
@@ -5,6 +5,7 @@
 .loading-tile {
   width: 280px;
   height: 280px;
+  margin: 1rem auto;
   content: '';
   background-color: #ececec;
   border-radius: 1rem;
@@ -26,6 +27,10 @@
     justify-content: center;
     gap: 1rem;
     flex-wrap: wrap;
+  }
+
+  .loading-tile {
+    margin: 0;
   }
 }
 
